# spellshell

./: .gitignore  Cargo.toml  README.md  grammar.pest  index.js  package-lock.json  package.json  spells.json
docs/: 01-grammar.md  02-ast-design.md  03-plugin-api.md  04-spellbook-spec.md  05-config-spec.md  06-error-messages.md  07-spell-taxonomy.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md
examples/: cleanup.spell  deploy.spell  report.spell
src/: ast.rs  executor.rs  main.rs  parser.rs  spellbook.rs
src/ai/: gpt.rs
src/commands/: divine.rs  mod.rs
