[package]
name = "spellshell"
version = "0.1.0"
edition = "2024"

[dependencies]
pest = "2.7"
pest_derive = "2.7"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"   # ← これを追加！

[build-dependencies]
# もし build.rs で動的コード生成する場合はこっちも
